--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <button type="submit" class="btn2 bg-[yellow] py-3 px-8 cursor-pointer lowercase text-[green]">lowercase</button>
 
-            <button type="submit" class="btn3 bg-[yellow] py-3 px-8 cursor-pointer text-[green]">Repeat</button>
+            <button type="submit" class="btn3 bg-[yellow] py-3 px-8 cursor-pointer text-[green]">Repeat*10</button>
 
             <button type="submit" class="btn4 bg-[yellow] py-3 px-8 cursor-pointer text-[green]">Repeat*100</button>
 
