emty div width change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="w-[600px] mx-auto mt-10 p-10 text-center bg-[pink]">
-        <h2 class="text-3xl text-[green] mb-10 w-[500px] mx-auto leading-10">Convert your text or paragraph to Upper and lower case also you can repeat your text </h2>
+        <h2 class="text-xl text-[green] mb-10 w-[500px] mx-auto leading-10">Convert your text or paragraph to Upper and lower case also you can repeat your text </h2>
         <div>
             <textarea name="input" cols="50" rows="4" class="inputbox p-2" placeholder="Enter your text"></textarea>
         </div>
@@ -25,7 +25,7 @@
 
             <button type="reset" class="btn6 bg-red-500 text-white py-3 px-8 cursor-pointer text-[green]">Reset</button>
         </div>
-        <div class="emty p-10 bg-white mt-10 w-[300px] overflow-x-auto mx-auto"></div>
+        <div class="emty p-10 bg-white mt-10 w-[500px] overflow-y-auto	 mx-auto"></div>
     </div>
 
     <script src="script.js"></script>
